Added more to part-3 code

--- a/part-3/filmtube.html
+++ b/part-3/filmtube.html
@@ -8,7 +8,7 @@
   <body>
     <div class = "header">
       <span class = "header-left">
-        Filmtube ...
+        Filmtube &nbsp; &nbsp; ...
       </span>
       <span class = "header-right">
         <button> Logout</button>
@@ -26,18 +26,24 @@
       </div>
     </div>
     <div class = "movies">
-      Movies
+      <h1>Movies</h1>
       <div class = "drama">
-        Drama<br>
-        <button>Play</button> Movie Name 1:33:21 <br>
-        <button>Play</button> Movie Name 1:33:21 <br>
-        <button>Play</button> Movie Name 1:33:21
+        <div class = "movie-item">Drama<br></div>
+        <div class = "movie-item"><button>Play</button>
+           Movie Name 1:33:21 <br></div>
+        <div class = "movie-item"><button>Play</button>
+           Movie Name 1:33:21 <br></div>
+        <div class = "movie-item"><button>Play</button>
+           Movie Name 1:33:21</div>
       </div>
       <div class = "romance">
-        Romance<br>
-        <button>Play</button> Movie Name 1:33:21 <br>
-        <button>Play</button> Movie Name 1:33:21 <br>
-        <button>Play</button> Movie Name 1:33:21
+        <div class = "movie-item">Romance<br></div>
+        <div class = "movie-item"><button>Play</button>
+           Movie Name 1:33:21 <br></div>
+        <div class = "movie-item"><button>Play</button>
+           Movie Name 1:33:21 <br></div>
+        <div class = "movie-item"><button>Play</button>
+           Movie Name 1:33:21</div>
       </div>
     </div>
   </body>
