part-2 still needs formatting, part-3 is considered finished

--- a/part-3/filmtube.html
+++ b/part-3/filmtube.html
@@ -26,24 +26,36 @@
       </div>
     </div>
     <div class = "movies">
-      <h1>Movies</h1>
+      <h1 class = "movie-title">Movies</h1>
       <div class = "drama">
-        <div class = "movie-item">Drama<br></div>
-        <div class = "movie-item"><button>Play</button>
-           Movie Name 1:33:21 <br></div>
-        <div class = "movie-item"><button>Play</button>
-           Movie Name 1:33:21 <br></div>
-        <div class = "movie-item"><button>Play</button>
-           Movie Name 1:33:21</div>
+        <div class = "movie-item movie-header">Drama<br></div>
+        <div class = "movie-item">
+          <button>Play</button> Movie Name
+          <span class = "movie-right"> 1:33:21 </span> <br>
+        </div>
+        <div class = "movie-item">
+          <button>Play</button> Movie Name
+          <span class = "movie-right"> 1:33:21 </span> <br>
+        </div>
+        <div class = "movie-item">
+          <button>Play</button> Movie Name
+          <span class = "movie-right"> 1:33:21 </span>
+        </div>
       </div>
       <div class = "romance">
-        <div class = "movie-item">Romance<br></div>
-        <div class = "movie-item"><button>Play</button>
-           Movie Name 1:33:21 <br></div>
-        <div class = "movie-item"><button>Play</button>
-           Movie Name 1:33:21 <br></div>
-        <div class = "movie-item"><button>Play</button>
-           Movie Name 1:33:21</div>
+        <div class = "movie-item movie-header">Romance<br></div>
+        <div class = "movie-item">
+          <button>Play</button> Movie Name
+          <span class = "movie-right"> 1:33:21 </span> <br>
+        </div>
+        <div class = "movie-item">
+          <button>Play</button> Movie Name
+          <span class = "movie-right"> 1:33:21 </span> <br>
+        </div>
+        <div class = "movie-item">
+          <button>Play</button> Movie Name
+          <span class = "movie-right"> 1:33:21 </span>
+        </div>
       </div>
     </div>
   </body>
