Probably last changes will double check later

--- a/part-3/filmtube.html
+++ b/part-3/filmtube.html
@@ -30,30 +30,30 @@
       <div class = "drama">
         <div class = "movie-item movie-header">Drama<br></div>
         <div class = "movie-item">
-          <button>Play</button> Movie Name
+          <button>Play</button> Movie name
           <span class = "movie-right"> 1:33:21 </span> <br>
         </div>
         <div class = "movie-item">
-          <button>Play</button> Movie Name
+          <button>Play</button> Movie name
           <span class = "movie-right"> 1:33:21 </span> <br>
         </div>
         <div class = "movie-item">
-          <button>Play</button> Movie Name
+          <button>Play</button> Movie name
           <span class = "movie-right"> 1:33:21 </span>
         </div>
       </div>
       <div class = "romance">
         <div class = "movie-item movie-header">Romance<br></div>
         <div class = "movie-item">
-          <button>Play</button> Movie Name
+          <button>Play</button> Movie name
           <span class = "movie-right"> 1:33:21 </span> <br>
         </div>
         <div class = "movie-item">
-          <button>Play</button> Movie Name
+          <button>Play</button> Movie name
           <span class = "movie-right"> 1:33:21 </span> <br>
         </div>
         <div class = "movie-item">
-          <button>Play</button> Movie Name
+          <button>Play</button> Movie name
           <span class = "movie-right"> 1:33:21 </span>
         </div>
       </div>
