--- a/part-3/filmtube.html
+++ b/part-3/filmtube.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class = "header">
-      <span class = "header-left">
+      <span>
         Filmtube &nbsp; &nbsp; ...
       </span>
       <span class = "header-right">
@@ -26,9 +26,9 @@
       </div>
     </div>
     <div class = "movies">
-      <h1 class = "movie-title">Movies</h1>
-      <div class = "drama">
-        <div class = "movie-item movie-header">Drama<br></div>
+      <h1 class = "movie-header">Movies</h1>
+      <div>
+        <div class = "movie-item movie-genre">Drama<br></div>
         <div class = "movie-item">
           <button>Play</button> Movie name
           <span class = "movie-right"> 1:33:21 </span> <br>
@@ -42,8 +42,8 @@
           <span class = "movie-right"> 1:33:21 </span>
         </div>
       </div>
-      <div class = "romance">
-        <div class = "movie-item movie-header">Romance<br></div>
+      <div>
+        <div class = "movie-item movie-genre">Romance<br></div>
         <div class = "movie-item">
           <button>Play</button> Movie name
           <span class = "movie-right"> 1:33:21 </span> <br>
